CRUD dinámico de Productos en el panel de administración

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -74,3 +74,11 @@ services:
   App\Service\Platform\Amazon\Transformer\AmazonProductTransformer:
     arguments:
       $logger: '@logger'
+
+  # Inyección de dependencias para los Servicios de Admin - Productos
+  App\Service\Admin\Product\ProductCollectionProcessorInterface:
+    alias: App\Service\Admin\Product\ProductCollectionProcessor
+
+  App\Service\Admin\Product\ProductCollectionProcessor:
+    arguments:
+      $entityManager: '@doctrine.orm.entity_manager'
